--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app">
       <h2>VIZARD</h2>
+      <p>magic visualization</p>
     </div>
     <script src="js/compiled/vizard.js" type="text/javascript"></script>
   </body>
