--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="urgence_evergreen.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -10,6 +11,7 @@
       <h2>VIZARD</h2>
       <p>magic visualization</p>
     </div>
+    <div id="vis-tooltip" class="vg-tooltip"></div>
     <script src="js/compiled/vizard.js" type="text/javascript"></script>
   </body>
 </html>
