--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <h2>VIZARD</h2>
+      <h2>oz</h2>
       <p>magic visualization</p>
     </div>
     <div id="vis-tooltip" class="vg-tooltip"></div>
-    <script src="js/compiled/vizard.js" type="text/javascript"></script>
+    <script src="js/compiled/oz.js" type="text/javascript"></script>
   </body>
 </html>
