clean up and generalize data flow, and flesh out README vision some

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app">
       <h2>oz</h2>
-      <p>magic visualization</p>
+      <p>pay no attention</p>
     </div>
     <div id="vis-tooltip" class="vg-tooltip"></div>
     <script src="js/compiled/oz.js" type="text/javascript"></script>
