clean up index.html

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="oz.svg" type="image/x-icon">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/metasoarous/oz/master/resources/public/oz.svg?sanitize=true" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
     <div id="app">
