--- a/resources/oz/public/index.html
+++ b/resources/oz/public/index.html
@@ -5,6 +5,8 @@
     <meta content="Oz document" name="description" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="oz.svg" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css"
+      href="https://cdn.jsdelivr.net/gh/metasoarous/cm-web-fonts@latest/fonts.css">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet"
