moved higlight-js code out into a separate GH repo for jsdelivr
originally, was just inlining in the head of the document from resources, and I don't want to have to track all those files in git

--- a/resources/oz/public/index.html
+++ b/resources/oz/public/index.html
@@ -6,13 +6,17 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="oz.svg" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" type="text/css"
-      href="https://cdn.jsdelivr.net/gh/metasoarous/cm-web-fonts@latest/fonts.css">
+        href="https://cdn.jsdelivr.net/gh/metasoarous/cm-web-fonts@latest/fonts.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/gh/metasoarous/highlight.js@latest/styles/default.min.css">
+    <script id="highlight-js-script"
+        src="https://cdn.jsdelivr.net/gh/metasoarous/highlight.js@latest/highlight.min.js"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/default.min.css"
-      integrity="sha512-3xLMEigMNYLDJLAgaGlDSxpGykyb+nQnJBzbkQy2a0gyVKL2ZpNOPIj1rD8IPFaJbwAgId/atho1+LBpWu5DhA=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--<link rel="stylesheet"-->
+      <!--href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/default.min.css"-->
+      <!--integrity="sha512-3xLMEigMNYLDJLAgaGlDSxpGykyb+nQnJBzbkQy2a0gyVKL2ZpNOPIj1rD8IPFaJbwAgId/atho1+LBpWu5DhA=="-->
+      <!--crossorigin="anonymous" referrerpolicy="no-referrer" />-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"-->
             <!--type="text/javascript"></script>-->
     <script id="MathJax-script" async
